promotion and payment fixed

--- a/html/Promotions.html
+++ b/html/Promotions.html
@@ -43,12 +43,14 @@
                 <li class="second-nav-header"><a class="second-nav-header-radius" href="#">Manga</a></li>
             </ul>
         </div>
-        <div role="main" class="favourites ui-content">
+        <div role="main" class="promotions-page-thing ui-content">
             <div class="loader">
                 <img class="loader-gif" src="./../Resources/images/giphy.gif" />
                 <p>The goodest bois are finding the products..</p>
             </div>
-            <div class="main products-items"></div>
+            <div class="main products-items">
+
+            </div>
 
             <br />
             <br />
