--- a/html/search.html
+++ b/html/search.html
@@ -63,6 +63,11 @@
                 <p> The goodest bois are finding the products..</p>
             </div>
 
+            <div class="error" style="display: none">
+                <img class="loader-gif" src="./../images/ezgif.com-gif-maker.gif">
+                <h2 class="error-message" style="display:block;"> No products found...</h2>
+            </div>
+
             <div class="ui-field-contain">
 
             </div>
