--- a/html/Ar.html
+++ b/html/Ar.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
     <link rel="stylesheet" href="../css/ar.css">
 </head>
@@ -8,44 +9,47 @@
 <script src="../js/models.js"></script>
 <script src="../js/userState.js"></script>
 <script src="../js/interaction.js"></script>
-<body style='margin : 0px; overflow: hidden;'>
-<div class='speech-bubble'></div>
-<a-scene embedded arjs cursor="rayOrigin: mouse" accepts-clicks>
 
-    <a-marker id="pyra-marker" type="pattern" url="../builder-markers/pyra.patt">
-        <a-entity id="pyra" gltf-model="url(../Resources/3dmodels/game/minecraft_-_steve/scene.gltf)"  scale="0.15 0.15 0.15"  position="0 0 0.5" ></a-entity>
-    </a-marker>
-    <a-marker id="biggie-marker" type="pattern" url="../builder-markers/biggie.patt">
-        <a-entity id="biggie" gltf-model="url(../Resources/3dmodels/game/minecraft_-_steve/scene.gltf)" material="color: green" rotation="0 0 0" position="0 0 0.5" scale="0.05 0.05 0.05"></a-entity>
-    </a-marker>
-    <a-marker id="frenchie-marker" type="pattern" url="../builder-markers/frenchie.patt">
-        <a-entity id="frenchie"  gltf-model="url(../Resources/3dmodels/game/minecraft_-_steve/scene.gltf)"material="color: green" rotation="0 180 0" position="0 0 0.5" scale="0.05 0.05 0.05"></a-entity>
-    </a-marker>
-    <a-marker id="toob-marker" type="pattern" url="../builder-markers/toob.patt">
-        <a-entity id="toob"  gltf-model="url(../Resources/3dmodels/game/minecraft_-_steve/scene.gltf)" material="color: green" rotation="0 180 0" position="0 0 0.5" scale="0.05 0.05 0.05"></a-entity>
-    </a-marker>
-    <a-marker id="lil-marker" type="pattern" url="../builder-markers/lil.patt">
-        <a-entity id="lil"  gltf-model="url(../Resources/3dmodels/game/minecraft_-_steve/scene.gltf)"material="color: green" rotation="0 180 0" position="0 0 0.5" scale="0.05 0.05 0.05"></a-entity>
-    </a-marker>
-    <a-marker id="hammer-marker" type="pattern" url="../builder-markers/hammer.patt">
-        <a-entity id="hammer"  gltf-model="url(../Resources/3dmodels/game/minecraft_-_cow/scene.gltf)" material="color: green" rotation="0 0 0" position="0 0 0" scale="0.05 0.05 0.05"></a-entity>
-    </a-marker>
-    <a-marker id="screwdriver-marker" type="pattern" url="../builder-markers/screwdriver.patt">
-        <a-entity id="screwdriver"  gltf-model="url(../Resources/3dmodels/game/minecraft_-_horse/scene.gltf)" material="color: green" rotation="0 0 0" position="0 0 0" scale="0.05 0.05 0.05"></a-entity>
-    </a-marker>
-    <a-marker id="blocks-marker" type="pattern" url="../builder-markers/blocks.patt">
-        <a-entity id="blocks"  gltf-model="url(../Resources/3dmodels/game/minecraft_-_witch/scene.gltf)" material="color: green" rotation="0 0 0" position="0 0 0" scale="0.05 0.05 0.05"></a-entity>
-    </a-marker>
-    <a-marker id="hat-marker" type="pattern" url="../builder-markers/hat.patt">
-        <a-entity id="hat" gltf-model="url(../Resources/3dmodels/game/minecraft_-_chicken/scene.gltf)" material="color: green" rotation="0 0 0" position="0 0 0" scale="0.05 0.05 0.05"></a-entity>
-    </a-marker>
-    <a-marker id="wrench-marker" type="pattern" url="../builder-markers/wrench.patt">
-        <a-entity id="wrench" gltf-model="url(../Resources/3dmodels/game/minecraft_-_pig/scene.gltf)" material="color: green" rotation="0 0 0" position="0 0 0" scale="0.05 0.05 0.05"></a-entity>
-    </a-marker>
-    <a-marker id="demo-marker" type="pattern" url="../builder-markers/demo.patt">
-        <a-box id="demo" position="0 0.5 0" scale="0.5 0.5 0.5" material='color: green;'></a-box>
-    </a-marker>
-    <a-entity camera></a-entity>
-</a-scene>
+<body style='margin : 0px; overflow: hidden;'>
+    <div class="notification">You earned 100 points</div>
+    <div class='speech-bubble'></div>
+    <a-scene embedded arjs cursor="rayOrigin: mouse" accepts-clicks>
+
+        <a-marker id="pyra-marker" type="pattern" url="../builder-markers/pyra.patt">
+            <a-entity id="pyra" gltf-model="url(../Resources/3dmodels/game/minecraft_-_steve/scene.gltf)" scale="0.15 0.15 0.15" position="0 0 0.5"></a-entity>
+        </a-marker>
+        <a-marker id="biggie-marker" type="pattern" url="../builder-markers/biggie.patt">
+            <a-entity id="biggie" gltf-model="url(../Resources/3dmodels/game/minecraft_-_steve/scene.gltf)" material="color: green" rotation="0 0 0" position="0 0 0.5" scale="0.05 0.05 0.05"></a-entity>
+        </a-marker>
+        <a-marker id="frenchie-marker" type="pattern" url="../builder-markers/frenchie.patt">
+            <a-entity id="frenchie" gltf-model="url(../Resources/3dmodels/game/minecraft_-_steve/scene.gltf)" material="color: green" rotation="0 180 0" position="0 0 0.5" scale="0.05 0.05 0.05"></a-entity>
+        </a-marker>
+        <a-marker id="toob-marker" type="pattern" url="../builder-markers/toob.patt">
+            <a-entity id="toob" gltf-model="url(../Resources/3dmodels/game/minecraft_-_steve/scene.gltf)" material="color: green" rotation="0 180 0" position="0 0 0.5" scale="0.05 0.05 0.05"></a-entity>
+        </a-marker>
+        <a-marker id="lil-marker" type="pattern" url="../builder-markers/lil.patt">
+            <a-entity id="lil" gltf-model="url(../Resources/3dmodels/game/minecraft_-_steve/scene.gltf)" material="color: green" rotation="0 180 0" position="0 0 0.5" scale="0.05 0.05 0.05"></a-entity>
+        </a-marker>
+        <a-marker id="hammer-marker" type="pattern" url="../builder-markers/hammer.patt">
+            <a-entity id="hammer" gltf-model="url(../Resources/3dmodels/game/minecraft_-_cow/scene.gltf)" material="color: green" rotation="0 0 0" position="0 0 0" scale="0.05 0.05 0.05"></a-entity>
+        </a-marker>
+        <a-marker id="screwdriver-marker" type="pattern" url="../builder-markers/screwdriver.patt">
+            <a-entity id="screwdriver" gltf-model="url(../Resources/3dmodels/game/minecraft_-_horse/scene.gltf)" material="color: green" rotation="0 0 0" position="0 0 0" scale="0.05 0.05 0.05"></a-entity>
+        </a-marker>
+        <a-marker id="blocks-marker" type="pattern" url="../builder-markers/blocks.patt">
+            <a-entity id="blocks" gltf-model="url(../Resources/3dmodels/game/minecraft_-_witch/scene.gltf)" material="color: green" rotation="0 0 0" position="0 0 0" scale="0.05 0.05 0.05"></a-entity>
+        </a-marker>
+        <a-marker id="hat-marker" type="pattern" url="../builder-markers/hat.patt">
+            <a-entity id="hat" gltf-model="url(../Resources/3dmodels/game/minecraft_-_chicken/scene.gltf)" material="color: green" rotation="0 0 0" position="0 0 0" scale="0.05 0.05 0.05"></a-entity>
+        </a-marker>
+        <a-marker id="wrench-marker" type="pattern" url="../builder-markers/wrench.patt">
+            <a-entity id="wrench" gltf-model="url(../Resources/3dmodels/game/minecraft_-_pig/scene.gltf)" material="color: green" rotation="0 0 0" position="0 0 0" scale="0.05 0.05 0.05"></a-entity>
+        </a-marker>
+        <a-marker id="demo-marker" type="pattern" url="../builder-markers/demo.patt">
+            <a-box id="demo" position="0 0.5 0" scale="0.5 0.5 0.5" material='color: green;'></a-box>
+        </a-marker>
+        <a-entity camera></a-entity>
+    </a-scene>
 </body>
+
 </html>
