--- a/html/UserProfile.html
+++ b/html/UserProfile.html
@@ -35,7 +35,7 @@
             </div>
 
         </div>
-        <p class="User-Profile-Edit Register-Account-Text"><a href="Login.html">Back to Home</a></p>
+        <p class="User-Profile-Edit Register-Account-Text"><a href="Dashboard.html" rel="external">Back to Home</a></p>
     </div>
     <!-- /content -->
 </body>
