--- a/html/fashion.html
+++ b/html/fashion.html
@@ -19,28 +19,30 @@
     <div data-role="page" data-theme="d" id="page-content">
         <div data-role="header" class="header-class">
             <div style="display: grid;grid-template-columns: 20% 40% 20% 20%;">
-                <button class="btn-home ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
-                <img src="../Resources/images/logos/Transparent.png" border="0">
-            </button>
-
+                <a href="Dashboard.html" rel="external" class="btn-home ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
+                    <img src="../Resources/images/logos/Transparent.png" border="0">
+                </a>
                 <h3 class="header-title" style="margin-bottom: 0 !important; margin-top: 18px !important;">Product</h3>
 
-                <button class="btn-camera ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
-                <img src="../Resources/images/icons/icons8-camera-24.png" border="0">
-            </button>
-                <button class="btn-userprofile ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
-                <img src="../Resources/images/icons/header-userprofile.png" border="0">
-            </button>
+                <a href="Ar.html" rel="external" class="btn-camera ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
+                    <img src="../Resources/images/icons/icons8-camera-24.png" border="0">
+                </a>
+
+
+                <a href="ProfileNavigation.html" rel="external" class="btn-userprofile ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
+                    <img src="../Resources/images/icons/header-userprofile.png" border="0">
+                </a>
+
             </div>
         </div>
 
         <div class="navbar-header" data-role="navbar">
             <!-- /navbar -->
             <ul>
-                <li class="second-nav-header"><a class="second-nav-header-radius" href="#">Food</a></li>
-                <li class="second-nav-header"><a class="second-nav-header-radius" href="#">Fashion</a></li>
-                <li class="second-nav-header"><a class="second-nav-header-radius" href="#">Games</a></li>
-                <li class="second-nav-header"><a class="second-nav-header-radius" href="#">Manga</a></li>
+                <li class="second-nav-header"><a class="second-nav-header-radius" href="fashion.html?id=Food" rel="external">Food</a></li>
+                <li class="second-nav-header"><a class="second-nav-header-radius" href="fashion.html?id=Fashion" rel="external">Fashion</a></li>
+                <li class="second-nav-header"><a class="second-nav-header-radius" href="fashion.html?id=Games" rel="external">Games</a></li>
+                <li class="second-nav-header"><a class="second-nav-header-radius" href="fashion.html?id=Manga" rel="external">Manga</a></li>
             </ul>
         </div>
 
@@ -65,25 +67,38 @@
                 <img class="loader-gif" src="./../Resources/images/giphy.gif">
                 <p> The goodest bois are finding the products..</p>
             </div>
+            <div id="drop-select" class="ui-content">
+                <a href="#filter-popup" data-rel="popup" data-position-to="window" class="filter-button login-button ui-btn ui-btn-inline rounded-button" data-transition="pop">Filter</a>
+                <div data-role="popup" id="filter-popup" data-theme="" class="ui-corner-all">
 
-            <div id="drop-select" style="display: none;">
-                 <select name="select-native-2" id="select-native-3" data-iconpos="right">
-                            <option value="0" style="width: 100px !important;">No Filter</option>
-                            <option value="1" style="width: 100px !important;">Price From Lowest to the Highest</option>
-                            <option value="2" style="width: 100px !important;">Price From Highest to the Lowest
-                    </option>
-                        </select>
+                    <form>
+                        <div class="form-filter" style="padding:10px 20px;">
+                            <fieldset data-role="controlgroup">
+                                <input type="radio" name="radio-choice-1" id="radio-choice-1" value="choice-1" checked="checked">
+                                <label for="radio-choice-1">Price From Lowest to the Highest</label>
+                                <input type="radio" name="radio-choice-1" id="radio-choice-2" value="choice-2">
+                                <label for="radio-choice-2">Price From Highest to the Lowest</label>
+                            </fieldset>
+                            <div data-role="rangeslider">
+                                <label for="range-1a">Price Range:</label>
+                                <input type="range" name="range-1a" id="range-1a" min="0" max="100" value="40">
+                                <label for="range-1b">Rangeslider:</label>
+                                <input type="range" name="range-1b" id="range-1b" min="0" max="100" value="80">
+                            </div>
+                            <button type="submit" class="login-button ui-btn ui-btn-inline rounded-button">Filter Products</button>
+
+                        </div>
+                    </form>
+                </div>
+
             </div>
             <div class="ui-field-contain">
-
             </div>
-
-
             <div class="main products-items">
-
             </div>
 
         </div>
+
 
         <br>
         <br>
@@ -124,6 +139,7 @@
         </div>
     </div>
     <!-- /content -->
+    </div>
 </body>
 <script type="text/javascript" src="../js/ProductPage.js"></script>
 <script type="text/javascript" src="../js/CategoryProducts.js"></script>
