--- a/html/favourite.html
+++ b/html/favourite.html
@@ -16,114 +16,137 @@
 </head>
 
 <body>
-<div data-role="page" data-theme="d" id="page-content">
-    <div data-role="header" class="header-class">
-        <div style="display: grid;grid-template-columns: 20% 40% 20% 20%;">
-            <button class="btn-home ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
-                <img src="../Resources/images/logos/Transparent.png" border="0">
-            </button>
+    <div data-role="page" data-theme="d" id="page-content">
+        <div data-role="header" class="header-class">
+            <div style="display: grid;grid-template-columns: 20% 40% 20% 20%;">
+                <a href="Dashboard.html" rel="external" class="btn-home ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
+                    <img src="../Resources/images/logos/Transparent.png" border="0">
+                </a>
+                <h3 class="header-title" style="margin-bottom: 0 !important; margin-top: 18px !important;">Favourite</h3>
 
-            <h3 class="header-title" style="margin-bottom: 0 !important; margin-top: 18px !important;">Product</h3>
-
-            <button class="btn-camera ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
-                <img src="../Resources/images/icons/icons8-camera-24.png" border="0">
-            </button>
-            <button class="btn-userprofile ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
-                <img src="../Resources/images/icons/header-userprofile.png" border="0">
-            </button>
-        </div>
-    </div>
-
-    <div class="navbar-header" data-role="navbar">
-        <!-- /navbar -->
-        <ul>
-            <li class="second-nav-header"><a class="second-nav-header-radius" href="#">Food</a></li>
-            <li class="second-nav-header"><a class="second-nav-header-radius" href="#">Fashion</a></li>
-            <li class="second-nav-header"><a class="second-nav-header-radius" href="#">Games</a></li>
-            <li class="second-nav-header"><a class="second-nav-header-radius" href="#">Manga</a></li>
-        </ul>
-    </div>
-
-    <div data-role="popup" id="cart-success" data-theme="" class="ui-corner-all" style="z-index: 9999;">
-        <div style="padding:10px 20px;">
-            <img style=" width: 200px;margin: auto;display: block;" src="../Resources/images/addtocart-success.gif" alt="">
-            <h2 style="color: #93dfca;">Item added to cart.</h2>
-        </div>
-    </div>
+                <a href="Ar.html" rel="external" class="btn-camera ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
+                    <img src="../Resources/images/icons/icons8-camera-24.png" border="0">
+                </a>
 
 
-    <div data-role="popup" id="cart-error" data-theme="" class="ui-corner-all">
-        <div style="padding:10px 20px;">
-            <img style="width: 200px;margin: auto;display: block;" src="../Resources/images/AW331857_12.gif" alt="">
-            <h2 style="color: #ff647c;">Something went wrong.</h2>
-        </div>
-    </div>
+                <a href="ProfileNavigation.html" rel="external" class="btn-userprofile ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
+                    <img src="../Resources/images/icons/header-userprofile.png" border="0">
+                </a>
 
-    <div role="main" class="favourites ui-content">
-
-        <div class="loader">
-            <img class="loader-gif" src="./../Resources/images/giphy.gif">
-            <p> The goodest bois are finding the products..</p>
+            </div>
         </div>
 
-        <div id="drop-select" style="display: none;">
-            <select name="select-native-2" id="select-native-3" data-iconpos="right">
-                <option value="0" style="width: 100px !important;">No Filter</option>
-                        <option value="1" style="width: 100px !important;">Price From Lowest to the Highest</option>
-                        <option value="2" style="width: 100px !important;">Price From Highest to the Lowest
-            </option>
-                    </select>
-        </div>
-        <div class="ui-field-contain">
-
-        </div>
-
-
-        <div class="main products-items">
-
-        </div>
-
-    </div>
-
-    <br>
-    <br>
-    <br>
-    <br>
-
-    <div class="page-footer footer-class" data-role="footer" style="position:absolute; bottom:0px; left:0px; right:0px; overflow:hidden;">
-        <div data-role="navbar" data-iconpos="bottom">
+        <div class="navbar-header" data-role="navbar">
+            <!-- /navbar -->
             <ul>
-                <li>
-                    <!-- <a href="#" data-role="button" data-icon="homeicon"></a> -->
-                    <a href="Dashboard.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
-                        <img src="../Resources/images/icons/icons8-home-24.png" border="0" width="35px" height="35px" />
-                    </a>
-                </li>
-                <li>
-                    <a href="search.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
-                        <img src="../Resources/images/icons/001-search.png" border="0" width="35px" height="35px" />
-                    </a>
-                </li>
-                <li>
-                    <a href="Promotions.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
-                        <img src="../Resources/images/icons/002-fire.png" border="0" width="35px" height="35px" />
-                    </a>
-                </li>
-                <li>
-                    <a href="Cart.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
-                        <img src="../Resources/images/icons/003-shopping-cart.png" border="0" width="35px" height="35px" />
-                    </a>
-                </li>
-                <li>
-                    <a href="Catagories.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
-                        <img src="../Resources/images/icons/003-menu.png" border="0" width="35px" height="35px" />
-                    </a>
-                </li>
+                <li class="second-nav-header"><a class="second-nav-header-radius" href="fashion.html?id=Food" rel="external">Food</a></li>
+                <li class="second-nav-header"><a class="second-nav-header-radius" href="fashion.html?id=Fashion" rel="external">Fashion</a></li>
+                <li class="second-nav-header"><a class="second-nav-header-radius" href="fashion.html?id=Games" rel="external">Games</a></li>
+                <li class="second-nav-header"><a class="second-nav-header-radius" href="fashion.html?id=Manga" rel="external">Manga</a></li>
             </ul>
         </div>
-    </div>
-</div>
-<!-- /content -->
+
+        <div data-role="popup" id="cart-success" data-theme="" class="ui-corner-all" style="z-index: 9999;">
+            <div style="padding:10px 20px;">
+                <img style=" width: 200px;margin: auto;display: block;" src="../Resources/images/addtocart-success.gif" alt="">
+                <h2 style="color: #93dfca;">Item added to cart.</h2>
+            </div>
+        </div>
+
+
+        <div data-role="popup" id="cart-error" data-theme="" class="ui-corner-all">
+            <div style="padding:10px 20px;">
+                <img style="width: 200px;margin: auto;display: block;" src="../Resources/images/AW331857_12.gif" alt="">
+                <h2 style="color: #ff647c;">Something went wrong.</h2>
+            </div>
+        </div>
+
+        <div role="main" class="favourites ui-content">
+
+            <div class="loader">
+                <img class="loader-gif" src="./../Resources/images/giphy.gif">
+                <p> The goodest bois are finding the products..</p>
+            </div>
+
+            <div id="drop-select" class="ui-content">
+                <a href="#filter-popup" data-rel="popup" data-position-to="window" class="filter-button login-button ui-btn ui-btn-inline rounded-button" data-transition="pop">Filter</a>
+                <div data-role="popup" id="filter-popup" data-theme="" class="ui-corner-all">
+
+                    <form>
+                        <div class="form-filter" style="padding:10px 20px;">
+                            <fieldset data-role="controlgroup">
+                                <input type="radio" name="radio-choice-1" id="radio-choice-1" value="choice-1" checked="checked">
+                                <label for="radio-choice-1">Price From Lowest to the Highest</label>
+                                <input type="radio" name="radio-choice-1" id="radio-choice-2" value="choice-2">
+                                <label for="radio-choice-2">Price From Highest to the Lowest</label>
+                            </fieldset>
+                            <div data-role="rangeslider">
+                                <label for="range-1a">Price Range:</label>
+                                <input type="range" name="range-1a" id="range-1a" min="0" max="100" value="40">
+                                <label for="range-1b">Rangeslider:</label>
+                                <input type="range" name="range-1b" id="range-1b" min="0" max="100" value="80">
+                            </div>
+                            <button type="submit" class="login-button ui-btn ui-btn-inline rounded-button">Filter Products</button>
+
+                        </div>
+                    </form>
+                </div>
+
+            </div>
+            <div class="ui-field-contain">
+
+            </div>
+
+            <div class="main products-items">
+
+            </div>
+
+            <br>
+            <br><br>
+            <div class="checkout-btn-cart">
+                <button class="checkout-button-std-sht login-button ui-btn ui-btn-inline rounded-button">Email List</button>
+            </div>
+
+            <br>
+            <br>
+            <br>
+            <br>
+
+            <div class="page-footer footer-class" data-role="footer" style="position:absolute; bottom:0px; left:0px; right:0px; overflow:hidden;">
+                <div data-role="navbar" data-iconpos="bottom">
+                    <ul>
+                        <li>
+                            <!-- <a href="#" data-role="button" data-icon="homeicon"></a> -->
+                            <a href="Dashboard.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
+                                <img src="../Resources/images/icons/icons8-home-24.png" border="0" width="35px" height="35px" />
+                            </a>
+                        </li>
+                        <li>
+                            <a href="search.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
+                                <img src="../Resources/images/icons/001-search.png" border="0" width="35px" height="35px" />
+                            </a>
+                        </li>
+                        <li>
+                            <a href="Promotions.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
+                                <img src="../Resources/images/icons/002-fire.png" border="0" width="35px" height="35px" />
+                            </a>
+                        </li>
+                        <li>
+                            <a href="Cart.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
+                                <img src="../Resources/images/icons/003-shopping-cart.png" border="0" width="35px" height="35px" />
+                            </a>
+                        </li>
+                        <li>
+                            <a href="Catagories.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
+                                <img src="../Resources/images/icons/003-menu.png" border="0" width="35px" height="35px" />
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <!-- /content -->
 </body>
 <script src="../js/Favourite.js"></script>
+
 </html>
