--- a/html/Orderhistory.html
+++ b/html/Orderhistory.html
@@ -19,40 +19,41 @@
     <div data-role="page" data-theme="d">
         <div data-role="header" class="header-class">
             <div style="display: grid;grid-template-columns: 20% 40% 20% 20%;">
-                <button class="btn-home ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
-                <img src="../Resources/images/logos/Transparent.png" border="0">
-            </button>
+                <a href="Dashboard.html" rel="external" class="btn-home ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
+                    <img src="../Resources/images/logos/Transparent.png" border="0">
+                </a>
+                <h3 class="header-title" style="margin-bottom: 0 !important; margin-top: 18px !important;">Order History</h3>
 
-                <h3 class="header-title" style="margin-bottom: 0 !important; margin-top: 18px !important;">Product</h3>
+                <a href="Ar.html" rel="external" class="btn-camera ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
+                    <img src="../Resources/images/icons/icons8-camera-24.png" border="0">
+                </a>
 
-                <button class="btn-camera ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
-                <img src="../Resources/images/icons/icons8-camera-24.png" border="0">
-            </button>
-                <button class="btn-userprofile ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
-                <img src="../Resources/images/icons/header-userprofile.png" border="0">
-            </button>
+
+                <a href="ProfileNavigation.html" rel="external" class="btn-userprofile ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
+                    <img src="../Resources/images/icons/header-userprofile.png" border="0">
+                </a>
+
             </div>
         </div>
 
         <div class="navbar-header" data-role="navbar">
             <!-- /navbar -->
             <ul>
-                <li class="second-nav-header"><a class="second-nav-header-radius" href="#">Food</a></li>
-                <li class="second-nav-header"><a class="second-nav-header-radius" href="#">Fashion</a></li>
-                <li class="second-nav-header"><a class="second-nav-header-radius" href="#">Games</a></li>
-                <li class="second-nav-header"><a class="second-nav-header-radius" href="#">Manga</a></li>
+                <li class="second-nav-header"><a class="second-nav-header-radius" href="fashion.html?id=Food" rel="external">Food</a></li>
+                <li class="second-nav-header"><a class="second-nav-header-radius" href="fashion.html?id=Fashion" rel="external">Fashion</a></li>
+                <li class="second-nav-header"><a class="second-nav-header-radius" href="fashion.html?id=Games" rel="external">Games</a></li>
+                <li class="second-nav-header"><a class="second-nav-header-radius" href="fashion.html?id=Manga" rel="external">Manga</a></li>
             </ul>
         </div>
         <div role="main" class="orderhistpru ui-content">
             <div class="order-main">
                 <div class="order-item">
                     <div class="order-item-image">
-                        <img class="order-product product-image-items-display" src="../Resources/images/items/ps4 png.png" alt=" PS4" style="width:70%; float: left;" />
+                        <img class="bulletproof order-product product-image-items-display" src="../Resources/images/items/ps4 png.png" alt=" PS4" style="width:70%; float: left;" />
                     </div>
                     <div class="order-item-text">
                         <p style="margin-top: 2px;"><b>PlayStation 4</b></p>
-                        <p class="order-product-desctiption">The PS4 Pro is Sony’s supercharged version of the PS4.
-                        </p>
+
                         <p class="price">Product Price :</p>
                         <p class="price float-price">$400</p>
                         <br>
@@ -62,12 +63,11 @@
                 </div>
                 <div class="order-item">
                     <div class="order-item-image">
-                        <img class="order-product product-image-items-display" src="../Resources/images/items/ps4 png.png" alt=" PS4" style="width:70%; float: left;" />
+                        <img class="bulletproof order-product product-image-items-display" src="../Resources/images/items/ps4 png.png" alt=" PS4" style="width:70%; float: left;" />
                     </div>
                     <div class="order-item-text">
                         <p style="margin-top: 2px;"><b>PlayStation 4</b></p>
-                        <p class="order-product-desctiption">The PS4 Pro is Sony’s supercharged version of the PS4.
-                        </p>
+
                         <p class="price">Product Price :</p>
                         <p class="price float-price">$400</p>
                         <br>
@@ -77,12 +77,11 @@
                 </div>
                 <div class="order-item">
                     <div class="order-item-image">
-                        <img class="order-product product-image-items-display" src="../Resources/images/items/ps4 png.png" alt=" PS4" style="width:70%; float: left;" />
+                        <img class="bulletproof order-product product-image-items-display" src="../Resources/images/items/ps4 png.png" alt=" PS4" style="width:70%; float: left;" />
                     </div>
                     <div class="order-item-text">
                         <p style="margin-top: 2px;"><b>PlayStation 4</b></p>
-                        <p class="order-product-desctiption">The PS4 Pro is Sony’s supercharged version of the PS4.
-                        </p>
+
                         <p class="price">Product Price :</p>
                         <p class="price float-price">$400</p>
                         <br>
