--- a/html/ProductPage.html
+++ b/html/ProductPage.html
@@ -22,36 +22,39 @@
     <div data-role="page" data-theme="d" idPag="page-content">
         <div data-role="header" class="header-class">
             <div style="display: grid;grid-template-columns: 20% 40% 20% 20%;">
-                <button class="btn-home ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
-                <img src="../Resources/images/logos/Transparent.png" border="0">
-            </button>
-
+                <a href="Dashboard.html" rel="external" class="btn-home ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
+                    <img src="../Resources/images/logos/Transparent.png" border="0">
+                </a>
                 <h3 class="header-title" style="margin-bottom: 0 !important; margin-top: 18px !important;">Product</h3>
 
-                <button class="btn-camera ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
-                <img src="../Resources/images/icons/icons8-camera-24.png" border="0">
-            </button>
-                <button class="btn-userprofile ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
-                <img src="../Resources/images/icons/header-userprofile.png" border="0">
-            </button>
+                <a href="Ar.html" rel="external" class="btn-camera ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
+                    <img src="../Resources/images/icons/icons8-camera-24.png" border="0">
+                </a>
+
+
+                <a href="ProfileNavigation.html" rel="external" class="btn-userprofile ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
+                    <img src="../Resources/images/icons/header-userprofile.png" border="0">
+                </a>
+
             </div>
         </div>
 
         <div class="navbar-header" data-role="navbar">
             <!-- /navbar -->
             <ul>
-                <li class="second-nav-header"><a class="second-nav-header-radius" href="#">Food</a></li>
-                <li class="second-nav-header"><a class="second-nav-header-radius" href="#">Fashion</a></li>
-                <li class="second-nav-header"><a class="second-nav-header-radius" href="#">Games</a></li>
-                <li class="second-nav-header"><a class="second-nav-header-radius" href="#">Manga</a></li>
+                <li class="second-nav-header"><a class="second-nav-header-radius" href="fashion.html?id=Food" rel="external">Food</a></li>
+                <li class="second-nav-header"><a class="second-nav-header-radius" href="fashion.html?id=Fashion" rel="external">Fashion</a></li>
+                <li class="second-nav-header"><a class="second-nav-header-radius" href="fashion.html?id=Games" rel="external">Games</a></li>
+                <li class="second-nav-header"><a class="second-nav-header-radius" href="fashion.html?id=Manga" rel="external">Manga</a></li>
             </ul>
         </div>
 
 
         <div role="main" class="product ui-content">
             <div id="content" style="display: none">
-                <div style="width: 90%;padding:10px 20px;height: 246px;" data-role="popup" id="add-review" data-theme="" class="ui-corner-all">
+                <div style="width: 90%;padding:10px 20px;height: 280px;" data-role="popup" id="add-review" data-theme="" class="ui-corner-all">
                     <div style="padding:10px 20px;">
+                        <label class="login-labels orange-label" for="Rating"><img class="review-rating-star" src="../Resources/images/icons/Stars png.png" border="0"></label>
                         <label class="login-labels orange-label" for="title">Title</label>
                         <input class="input-white-background" type="text" name="title" id="title" placeholder="Title" value="">
                         <label class="login-labels orange-label" for="review">Review</label>
@@ -90,6 +93,7 @@
                         <button onclick="addReviewProduct()">Add Review</button>
                         <button onclick="addReviewProduct()">Share</button>
                     </div>
+                    <label class="login-labels orange-label" for="Rating"><img class="review-rating-star-legends" src="../Resources/images/icons/Stars png.png" border="0"></label>
                     <div class="share-product">
 
                     </div>
