--- a/html/ProfileNavigation.html
+++ b/html/ProfileNavigation.html
@@ -18,23 +18,25 @@
     <div data-role="page">
         <div role="main" class="login ui-content">
 
-            <img class="User-registration Ipad-logo-size logo-image" src="../Resources/images/Logos/Transparent.png"
-                alt="User Icon">
+            <img class="User-registration Ipad-logo-size logo-image" src="../Resources/images/Logos/Transparent.png" alt="User Icon">
             <label class="UserNavigation-labels login-labels orange-label" for="username">Username:</label>
             <label class="UserNavigation-labels login-labels orange-label" for="username">Email:</label>
 
             <ul class="Profile-Navigation-List" data-role="listview">
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">My Favourites</a></li>
-                <li><a href="#">Categories</a></li>
-                <li><a href="#">Leaderboard</a></li>
-                <li><a href="#">Order History</a></li>
+                <li><a href="AboutUs.html" rel="external">About Us</a></li>
+                <li><a href="favourite.html" rel="external">My Favourites</a></li>
+                <li><a href="Catagories.html" rel="external">Categories</a></li>
+                <li><a href="leaderboard.html" rel="external">Leaderboard</a></li>
+                <li><a href="Orderhistory.html" rel="external">Order History</a></li>
             </ul>
 
         </div>
-        <p class="UserNavigation logout User-Profile-Edit Register-Account-Text"><a href="Login.html">Logout</a></p>
-        <p class="UserNavigation User-Profile-Edit Register-Account-Text"><a href="Login.html">Back to Home</a></p>
-    </div><!-- /content -->
+        <p class="UserNavigation logout User-Profile-Edit Register-Account-Text"><a href="Login.html" rel="external">Logout</a></p>
+        <p class="UserNavigation User-Profile-Edit Register-Account-Text"><a href="Dashboard.html" rel="external">Back to Home</a></p>
+
+    </div>
+
+    <!-- /content -->
 </body>
 
 </html>
