leaderboard, padding and font size fixed

--- a/html/leaderboard.html
+++ b/html/leaderboard.html
@@ -50,10 +50,7 @@
 
         <div role="main" class="leaderboard ui-content">
             <div class="shinny-header">
-                <H1 style="text-align: center;">SCAN & WIN</H1>
-                <p>
-                    Scan AR Markers spread through out the local stores and win coupons for each completed objective. Keep scanning to increase points and get a chance to take part in "Anything you can carry, you get it for free" at the end of each month"
-                </p>
+                <img class="leaderboard-image" src="../Resources/images/items/91-1.png" alt="User Icon">
             </div>
             <div class="main-grid-for-topuser">
                 <div class="item">
